fix person overflow

--- a/webapp/src/properties/person/person.scss
+++ b/webapp/src/properties/person/person.scss
@@ -1,7 +1,5 @@
 .Person {
     padding: 4px 8px;
-    margin-right: 20px;
-    min-width: 180px;
     display: flex;
     align-items: center;
     border-radius: 4px;
@@ -16,6 +14,7 @@
         display: flex;
         align-items: center;
         color: rgba(var(--center-channel-color-rgb), 1);
+        overflow: hidden;
 
         img {
             border-radius: 50px;
